update to last asm lib